--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lehibeltran86/dev-mt-in.git"
+    "url": "git+https://github.com/lehibeltran/dev-mt-in.git"
   },
   "keywords": [
     "socialApp"
@@ -16,14 +16,14 @@
   "author": "lehiBeltran",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lehibeltran86/dev-mt-in/issues"
+    "url": "https://github.com/lehibeltran/dev-mt-in/issues"
   },
-  "homepage": "https://github.com/lehibeltran86/dev-mt-in#readme",
+  "homepage": "https://github.com/lehibeltran/dev-mt-in#readme",
   "dependencies": {
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
-    "angularfire": "^2.0.1",
     "bootstrap": "^3.3.6",
+    "express": "^4.14.0",
     "jquery": "^2.2.4"
   }
 }
